Use valueOf instead of primitive wrapper constructors
Search and replace of `new PrimitiveType(` with `PrimitiveType.valueOf(`

Fix the vich test so that it continues to ensure 32 unique objects.

Fixes: #10937

[ci skip]

Signed-off-by: Graham Chapman <graham_chapman@ca.ibm.com>