@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2001, 2018 IBM Corp. and others
+ * Copyright (c) 2001, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -108,7 +108,7 @@ public class StackMapCoreGenerator {
 	 */
 	public void stackMapTestMethod_3(int i, String s, long l, char[] charArray) {
 		int[] intArray = new int[10];
-		stackMapTestMethod_4('0', false, new Integer("1"), new Exception(), 1,
+		stackMapTestMethod_4('0', false, Integer.valueOf("1"), new Exception(), 1,
 				intArray);
 
 	}
